[gd_scene load_steps=4 format=3 uid="uid://ceoppdntxvjud"]

[ext_resource type="Script" path="res://scripts/controls_menu.gd" id="1_s2qvl"]
[ext_resource type="AudioStream" uid="uid://yox6h1qc3ec8" path="res://assets/sound/hud/MP3_Button Clicks & Beeps_15.mp3" id="2_rbr0g"]
[ext_resource type="AudioStream" uid="uid://k4crmxfxfc65" path="res://assets/sound/hud/MP3_Button Clicks & Beeps_21.mp3" id="3_ndyba"]

[node name="ControlsMenu" type="Control"]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.002
offset_right = -0.1521
offset_bottom = -0.296082
script = ExtResource("1_s2qvl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 60
text = "Controls"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_top = 123.0
offset_right = 1154.0
offset_bottom = 263.0
tab_alignment = 1
current_tab = 0

[node name="KeyBoardMouse" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="TabContainer/KeyBoardMouse"]
layout_mode = 2
text = "Move: WASD"

[node name="Label2" type="Label" parent="TabContainer/KeyBoardMouse"]
layout_mode = 2
text = "Aim: Mouse"

[node name="Label3" type="Label" parent="TabContainer/KeyBoardMouse"]
layout_mode = 2
text = "Swap left: Q / Scroll Down"

[node name="Label4" type="Label" parent="TabContainer/KeyBoardMouse"]
layout_mode = 2
text = "Swap Right: E / Scroll Up"

[node name="Controller" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="TabContainer/Controller"]
layout_mode = 2
text = "Move: Left Stick"

[node name="Label2" type="Label" parent="TabContainer/Controller"]
layout_mode = 2
text = "Aim: Right Stick"

[node name="Label3" type="Label" parent="TabContainer/Controller"]
layout_mode = 2
text = "Swap Left: Left Bumper"

[node name="Label4" type="Label" parent="TabContainer/Controller"]
layout_mode = 2
text = "Swap Right: Right Bumper"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_top = 598.0
offset_right = 1151.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rbr0g")
volume_db = -10.0
pitch_scale = 3.05

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ndyba")
volume_db = -10.0
pitch_scale = 2.03
